--- a/index.html
+++ b/index.html
@@ -32,115 +32,8 @@
   </style>
 </head>
 <body class="bg-background text-white font-sans">
-
-  <!-- Navbar -->
-  <nav class="bg-card fixed w-full top-0 z-50 shadow-md">
-    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-      <h1 class="text-primary text-xl font-bold">Saugat Neupane</h1>
-      <ul class="flex space-x-6 text-sm font-medium">
-        <li><a href="#about" class="hover:text-primary">About</a></li>
-        <li><a href="#skills" class="hover:text-primary">Skills</a></li>
-        <li><a href="#training" class="hover:text-primary">Training</a></li>
-        <li><a href="#experience" class="hover:text-primary">Experience</a></li>
-        <li><a href="#education" class="hover:text-primary">Education</a></li>
-        <li><a href="#contact" class="hover:text-primary">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <main class="pt-36 animate-fadeIn">
-
-    <!-- Hero -->
-    <section class="text-center py-20 px-4">
-      <h2 class="text-4xl font-bold text-primary mb-4 animate-bounce">🚀 Linux & DevOps Specialist</h2>
-      <p class="text-lg text-gray-300 max-w-2xl mx-auto">
-        With 3+ years of experience in Linux, cloud platforms, virtualization, containers, and automation — I design, deploy and support robust infrastructure solutions.
-      </p>
-    </section>
-
-    <!-- About -->
-    <section id="about" class="py-16 bg-card rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg">
-      <h2 class="text-3xl text-primary font-semibold mb-4">🙋‍♂️ About Me</h2>
-      <p class="text-gray-300">
-        I’m a hands-on IT professional with a strong foundation in Linux systems, virtualization, networking, and cloud infrastructure. I’ve worked on configuring bare-metal hypervisors, containerized environments, monitoring, and backups — all while supporting customer migrations and automating deployment pipelines. Always ready to learn and adapt, I enjoy collaborating across teams to solve problems and deliver value.
-      </p>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills" class="py-16 max-w-5xl mx-auto px-6">
-      <h2 class="text-3xl text-primary font-semibold mb-6">🛠️ Technical Skills</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-gray-300">
-        <div class="bg-card p-4 rounded shadow">🐧 Operating Systems: Linux, Windows</div>
-        <div class="bg-card p-4 rounded shadow">📦 Containers: Docker, Podman</div>
-        <div class="bg-card p-4 rounded shadow">🖥️ Virtualization: VMware, KVM, XCP-NG, Verge.io</div>
-        <div class="bg-card p-4 rounded shadow">☁️ Cloud: Apache CloudStack, Jelastic, Azure</div>
-        <div class="bg-card p-4 rounded shadow">🛢️ Storage: Open-E, TrueNAS</div>
-        <div class="bg-card p-4 rounded shadow">💽 Database: MySQL, PostgreSQL, MSSQL</div>
-        <div class="bg-card p-4 rounded shadow">🛡️ Backup: Arcserve UDP, Ahsay, Commvault</div>
-        <div class="bg-card p-4 rounded shadow">📡 Monitoring: Zabbix</div>
-        <div class="bg-card p-4 rounded shadow">🔧 RMM: Ninja</div>
-        <div class="bg-card p-4 rounded shadow">🧑‍💻 Programming: Python, Bash</div>
-        <div class="bg-card p-4 rounded shadow">🌐 Web Dev: HTML, CSS</div>
-        <div class="bg-card p-4 rounded shadow">🤝 Soft Skills: Teamwork, Communication, Coordination</div>
-      </div>
-    </section>
-
-    <!-- Training -->
-    <section id="training" class="py-16 bg-card rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg">
-      <h2 class="text-3xl text-primary font-semibold mb-4">📚 Training & Certifications</h2>
-      <p class="text-gray-300">
-        ✅ <strong>CCNA (Cisco Certified Network Associate)</strong> – Completed a 3-month training covering networking fundamentals, OSI layers, IP addressing, routing, switching, and Cisco configurations. Learned practical networking skills and the foundational theory behind LAN/WAN architecture.
-      </p>
-    </section>
-
-    <!-- Experience -->
-    <section id="experience" class="py-16 max-w-4xl mx-auto px-6">
-      <h2 class="text-3xl text-primary font-semibold mb-4">💼 Work Experience</h2>
-
-      <div class="mb-6">
-        <h3 class="text-xl font-bold mb-2">Senior Assistant (IT) — Datahub Pvt. Ltd (Nov 2021 – Present)</h3>
-        <ul class="list-disc list-inside text-gray-300 space-y-2">
-          <li>🛠️ Configured hypervisors like VMware, XenServer, XCP-NG, Verge.io</li>
-          <li>💾 Installed TrueNAS & Open-E storage systems on bare-metal servers</li>
-          <li>⚙️ Wrote scripts to automate software installations & system tasks</li>
-          <li>📈 Deployed monitoring systems for VMs, containers, and hardware</li>
-          <li>🧪 Performed UAT and diagnosed bugs across platforms</li>
-          <li>🔄 Helped migrate client websites/web apps to cloud infrastructure</li>
-          <li>📞 Provided OS-level support and set up client backup servers</li>
-        </ul>
-      </div>
-
-      <div>
-        <h3 class="text-xl font-bold mb-2">Intern — Datahub Pvt. Ltd (Nov 2021 – Feb 2022)</h3>
-        <ul class="list-disc list-inside text-gray-300 space-y-2">
-          <li>🛠️ Provisioned and configured VMs for clients</li>
-          <li>🔍 Set up monitoring tools for performance tracking</li>
-          <li>🎫 Handled tickets and provided client support</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Education -->
-    <section id="education" class="py-16 max-w-4xl mx-auto px-6">
-      <h2 class="text-3xl text-primary font-semibold mb-4">🎓 Education</h2>
-      <ul class="text-gray-300 space-y-2">
-        <li><strong>B.Sc. CSIT</strong> – Swastik College (TU Affiliated) | 2073–2078</li>
-        <li><strong>+2 Science</strong> – Ambition Academy | 2071–2073</li>
-        <li><strong>SLC</strong> – Apex Life School | 2070</li>
-      </ul>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="py-16 bg-card rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300">
-      <h2 class="text-3xl text-primary font-semibold mb-4">📬 Contact</h2>
-      <p>📧 Email: <a href="mailto:saugatneupane31@gmail.com" class="text-primary">saugatneupane31@gmail.com</a></p>
-      <p>📞 Phone: +977 9860905972</p>
-      <p>📍 Location: Kaushaltar, Bhaktapur</p>
-    </section>
-  </main>
-
-  <footer class="text-center py-6 text-gray-500 border-t border-gray-700 mt-10">
-    &copy; 2025 Saugat Neupane. All rights reserved.
-  </footer>
+  <!-- Add all the full site content from earlier here -->
+  <h1 class="text-4xl text-center mt-10 text-primary font-bold animate-bounce">🚀 Welcome to Saugat's Portfolio!</h1>
+  <p class="text-center text-gray-300 mt-4">Looks like it's working now 🎉</p>
 </body>
 </html>
