--- a/index.html
+++ b/index.html
@@ -56,4 +56,77 @@
     <section id="skills" class="py-16 max-w-5xl mx-auto px-6">
       <h2 class="text-3xl text-teal-300 font-semibold mb-6">🛠️ Technical Skills</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-gray-300">
-        <div class="bg-gray-800 p-4 rounded shadow">🐧 Linux, 🪟
+        <div class="bg-gray-800 p-4 rounded shadow">🐧 Linux, 🪟 Windows</div>
+        <div class="bg-gray-800 p-4 rounded shadow">📦 Docker, 🧪 Podman</div>
+        <div class="bg-gray-800 p-4 rounded shadow">🖥️ VMware, KVM, XCP-NG, Verge.io</div>
+        <div class="bg-gray-800 p-4 rounded shadow">☁️ CloudStack, Jelastic, Azure</div>
+        <div class="bg-gray-800 p-4 rounded shadow">💾 TrueNAS, Open-E</div>
+        <div class="bg-gray-800 p-4 rounded shadow">🛢️ MySQL, PostgreSQL, MSSQL</div>
+        <div class="bg-gray-800 p-4 rounded shadow">🛡️ Arcserve UDP, Ahsay, Commvault</div>
+        <div class="bg-gray-800 p-4 rounded shadow">📡 Zabbix, 🔧 Ninja RMM</div>
+        <div class="bg-gray-800 p-4 rounded shadow">🐍 Python, 🖊️ Bash</div>
+        <div class="bg-gray-800 p-4 rounded shadow">🌐 HTML, 🎨 CSS</div>
+        <div class="bg-gray-800 p-4 rounded shadow">🤝 Teamwork, Communication, Coordination</div>
+      </div>
+    </section>
+
+    <!-- Training -->
+    <section id="training" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg">
+      <h2 class="text-3xl text-teal-300 font-semibold mb-4">📚 Training & Certifications</h2>
+      <p class="text-gray-300">
+        ✅ <strong>CCNA</strong> – 3-month Cisco networking training covering routing, switching, OSI model, and Cisco device configurations. Gained hands-on experience with practical networking design and troubleshooting.
+      </p>
+    </section>
+
+    <!-- Experience -->
+    <section id="experience" class="py-16 max-w-4xl mx-auto px-6">
+      <h2 class="text-3xl text-teal-300 font-semibold mb-4">💼 Work Experience</h2>
+
+      <div class="mb-6">
+        <h3 class="text-xl font-bold mb-2">Senior Assistant (IT) — Datahub Pvt. Ltd (Nov 2021 – Present)</h3>
+        <ul class="list-disc list-inside text-gray-300 space-y-2">
+          <li>🛠️ Deployed hypervisors: VMware, XenServer, XCP-NG, Verge.io</li>
+          <li>💾 Installed TrueNAS & Open-E on bare-metal servers</li>
+          <li>⚙️ Automated tasks with Bash & Python</li>
+          <li>📈 Configured Zabbix for servers, containers, and VMs</li>
+          <li>🧪 Performed UAT on internal platforms</li>
+          <li>🔄 Assisted client migrations to the cloud</li>
+          <li>📞 Provided OS support & configured backups</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3 class="text-xl font-bold mb-2">Intern — Datahub Pvt. Ltd (Nov 2021 – Feb 2022)</h3>
+        <ul class="list-disc list-inside text-gray-300 space-y-2">
+          <li>🛠️ Provisioned and configured virtual machines</li>
+          <li>📊 Setup monitoring tools</li>
+          <li>🎫 Handled client tickets and support</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Education -->
+    <section id="education" class="py-16 max-w-4xl mx-auto px-6">
+      <h2 class="text-3xl text-teal-300 font-semibold mb-4">🎓 Education</h2>
+      <ul class="text-gray-300 space-y-2">
+        <li><strong>B.Sc. CSIT</strong> – Swastik College (TU Affiliated) | 2073–2078</li>
+        <li><strong>+2 Science</strong> – Ambition Academy | 2071–2073</li>
+        <li><strong>SLC</strong> – Apex Life School | 2070</li>
+      </ul>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300">
+      <h2 class="text-3xl text-teal-300 font-semibold mb-4">📬 Contact</h2>
+      <p>📧 Email: <a href="mailto:saugatneupane31@gmail.com" class="text-teal-400">saugatneupane31@gmail.com</a></p>
+      <p>📞 Phone: +977 9860905972</p>
+      <p>📍 Location: Kaushaltar, Bhaktapur</p>
+    </section>
+
+  </main>
+
+  <footer class="text-center py-6 text-gray-500 border-t border-gray-700 mt-10">
+    &copy; 2025 Saugat Neupane. All rights reserved.
+  </footer>
+</body>
+</html>
