--- a/index.html
+++ b/index.html
@@ -4,129 +4,137 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Saugat Neupane | Portfolio</title>
-
-  <!-- ✅ Tailwind via Unpkg CDN (more reliable on GitHub Pages) -->
   <link href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
   <style>
     html { scroll-behavior: smooth; }
-    .fade-in {
-      animation: fadeIn 2s ease-in-out;
-    }
+    .fade-in { animation: fadeIn 1.2s ease-in-out both; }
+    .slide-up { animation: slideUp 1.2s ease-in-out both; }
+    .pulse-hover:hover { transform: scale(1.03); transition: transform 0.3s ease-in-out; }
     @keyframes fadeIn {
       0% { opacity: 0; }
       100% { opacity: 1; }
+    }
+    @keyframes slideUp {
+      0% { opacity: 0; transform: translateY(30px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body class="bg-gray-900 text-white font-sans">
 
-  <!-- Navbar -->
-  <nav class="bg-gray-800 fixed w-full top-0 z-50 shadow-md">
-    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-      <h1 class="text-teal-400 text-xl font-bold">Saugat Neupane</h1>
-      <ul class="flex space-x-6 text-sm font-medium">
-        <li><a href="#about" class="hover:text-teal-300">About</a></li>
-        <li><a href="#skills" class="hover:text-teal-300">Skills</a></li>
-        <li><a href="#training" class="hover:text-teal-300">Training</a></li>
-        <li><a href="#experience" class="hover:text-teal-300">Experience</a></li>
-        <li><a href="#education" class="hover:text-teal-300">Education</a></li>
-        <li><a href="#contact" class="hover:text-teal-300">Contact</a></li>
+<!-- Navbar -->
+<nav class="bg-gray-800 fixed w-full top-0 z-50 shadow-md">
+  <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+    <h1 class="text-teal-400 text-xl font-bold">Saugat Neupane</h1>
+    <ul class="flex space-x-6 text-sm font-medium">
+      <li><a href="#about" class="hover:text-teal-300">About</a></li>
+      <li><a href="#skills" class="hover:text-teal-300">Skills</a></li>
+      <li><a href="#training" class="hover:text-teal-300">Training</a></li>
+      <li><a href="#experience" class="hover:text-teal-300">Experience</a></li>
+      <li><a href="#education" class="hover:text-teal-300">Education</a></li>
+      <li><a href="#contact" class="hover:text-teal-300">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+
+<main class="pt-36 fade-in">
+
+  <!-- Hero -->
+  <section class="text-center py-20 px-4">
+    <h2 class="text-4xl font-bold text-teal-400 mb-4 animate-bounce">🚀 DevOps & Linux Engineer</h2>
+    <p class="text-lg text-gray-300 max-w-2xl mx-auto slide-up">
+      Experienced in Linux systems, virtual platforms, cloud orchestration, monitoring, and automation — turning infrastructure into robust systems.
+    </p>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
+    <h2 class="text-3xl text-teal-300 font-semibold mb-4">🙋‍♂️ About Me</h2>
+    <p class="text-gray-300">
+      I'm an adaptable and quick-learning IT professional with 3+ years of experience, passionate about Linux, cloud virtualization, DevOps, and infrastructure design. I bring hands-on expertise with cloud platforms, bare-metal hypervisors, monitoring tools, and scripting.
+    </p>
+  </section>
+
+  <!-- Skills -->
+  <section id="skills" class="py-16 max-w-5xl mx-auto px-6 fade-in">
+    <h2 class="text-3xl text-teal-300 font-semibold mb-6">🛠️ Technical Skills</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-gray-300">
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐧 Linux, 🪟 Windows OS</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📦 Docker, Podman (Containers)</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🖥️ VMware, KVM, XCP-NG, Verge.io</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">☁️ CloudStack, Jelastic, Azure</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">💾 TrueNAS, Open-E (Storage)</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛢️ MySQL, PostgreSQL, MSSQL</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📡 Zabbix, 🔧 Ninja RMM</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛡️ Arcserve UDP, Ahsay, Commvault</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐍 Python, 💻 Bash Scripting</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🌐 HTML, CSS</div>
+      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🤝 Communication, 🧠 Teamwork</div>
+    </div>
+  </section>
+
+  <!-- Training -->
+  <section id="training" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
+    <h2 class="text-3xl text-teal-300 font-semibold mb-4">📚 Training & Certifications</h2>
+    <p class="text-gray-300">
+      ✅ <strong>CCNA</strong> – 3-month Cisco networking course: OSI model, routing/switching, practical design & hardware implementation.
+    </p>
+  </section>
+
+  <!-- Experience -->
+  <section id="experience" class="py-16 max-w-4xl mx-auto px-6 fade-in">
+    <h2 class="text-3xl text-teal-300 font-semibold mb-6">💼 Work Experience</h2>
+
+    <div class="mb-8">
+      <h3 class="text-xl font-bold mb-2">Senior Assistant (IT) – Datahub Pvt. Ltd</h3>
+      <p class="text-sm text-gray-400">📅 Nov 2021 – Present</p>
+      <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
+        <li>Provisioned and deployed bare-metal hypervisors (VMware, XCP-NG, Verge.io)</li>
+        <li>Installed & configured storage solutions: TrueNAS, Open-E</li>
+        <li>Configured Docker & Podman containers for Dev & Prod workloads</li>
+        <li>Designed Zabbix monitoring for servers, containers, and services</li>
+        <li>Performed User Acceptance Testing (UAT) on internal platforms</li>
+        <li>Created automation scripts using Python & Bash</li>
+        <li>Configured & managed backups using Arcserve, Ahsay, and Commvault</li>
+        <li>Provided Linux & Windows support, resolved technical support tickets</li>
+        <li>Assisted cloud migration, VM provisioning, and client infrastructure setup</li>
       </ul>
     </div>
-  </nav>
 
-  <main class="pt-36 fade-in">
-
-    <!-- Hero -->
-    <section class="text-center py-20 px-4">
-      <h2 class="text-4xl font-bold text-teal-400 mb-4 animate-bounce">🚀 Linux & DevOps Specialist</h2>
-      <p class="text-lg text-gray-300 max-w-2xl mx-auto">With 3+ years of experience in cloud platforms, containers, virtualization, and automation — I build optimized and secure infrastructure solutions.</p>
-    </section>
-
-    <!-- About -->
-    <section id="about" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg">
-      <h2 class="text-3xl text-teal-300 font-semibold mb-4">🙋‍♂️ About Me</h2>
-      <p class="text-gray-300">
-        I’m a hands-on IT professional with a strong foundation in Linux systems, virtualization, networking, and cloud infrastructure. I’ve worked on configuring bare-metal hypervisors, containerized environments, monitoring, and backups — all while supporting customer migrations and automating deployment pipelines.
-      </p>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills" class="py-16 max-w-5xl mx-auto px-6">
-      <h2 class="text-3xl text-teal-300 font-semibold mb-6">🛠️ Technical Skills</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-gray-300">
-        <div class="bg-gray-800 p-4 rounded shadow">🐧 Linux, 🪟 Windows</div>
-        <div class="bg-gray-800 p-4 rounded shadow">📦 Docker, 🧪 Podman</div>
-        <div class="bg-gray-800 p-4 rounded shadow">🖥️ VMware, KVM, XCP-NG, Verge.io</div>
-        <div class="bg-gray-800 p-4 rounded shadow">☁️ CloudStack, Jelastic, Azure</div>
-        <div class="bg-gray-800 p-4 rounded shadow">💾 TrueNAS, Open-E</div>
-        <div class="bg-gray-800 p-4 rounded shadow">🛢️ MySQL, PostgreSQL, MSSQL</div>
-        <div class="bg-gray-800 p-4 rounded shadow">🛡️ Arcserve UDP, Ahsay, Commvault</div>
-        <div class="bg-gray-800 p-4 rounded shadow">📡 Zabbix, 🔧 Ninja RMM</div>
-        <div class="bg-gray-800 p-4 rounded shadow">🐍 Python, 🖊️ Bash</div>
-        <div class="bg-gray-800 p-4 rounded shadow">🌐 HTML, 🎨 CSS</div>
-        <div class="bg-gray-800 p-4 rounded shadow">🤝 Teamwork, Communication, Coordination</div>
-      </div>
-    </section>
-
-    <!-- Training -->
-    <section id="training" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg">
-      <h2 class="text-3xl text-teal-300 font-semibold mb-4">📚 Training & Certifications</h2>
-      <p class="text-gray-300">
-        ✅ <strong>CCNA</strong> – 3-month Cisco networking training covering routing, switching, OSI model, and Cisco device configurations. Gained hands-on experience with practical networking design and troubleshooting.
-      </p>
-    </section>
-
-    <!-- Experience -->
-    <section id="experience" class="py-16 max-w-4xl mx-auto px-6">
-      <h2 class="text-3xl text-teal-300 font-semibold mb-4">💼 Work Experience</h2>
-
-      <div class="mb-6">
-        <h3 class="text-xl font-bold mb-2">Senior Assistant (IT) — Datahub Pvt. Ltd (Nov 2021 – Present)</h3>
-        <ul class="list-disc list-inside text-gray-300 space-y-2">
-          <li>🛠️ Deployed hypervisors: VMware, XenServer, XCP-NG, Verge.io</li>
-          <li>💾 Installed TrueNAS & Open-E on bare-metal servers</li>
-          <li>⚙️ Automated tasks with Bash & Python</li>
-          <li>📈 Configured Zabbix for servers, containers, and VMs</li>
-          <li>🧪 Performed UAT on internal platforms</li>
-          <li>🔄 Assisted client migrations to the cloud</li>
-          <li>📞 Provided OS support & configured backups</li>
-        </ul>
-      </div>
-
-      <div>
-        <h3 class="text-xl font-bold mb-2">Intern — Datahub Pvt. Ltd (Nov 2021 – Feb 2022)</h3>
-        <ul class="list-disc list-inside text-gray-300 space-y-2">
-          <li>🛠️ Provisioned and configured virtual machines</li>
-          <li>📊 Setup monitoring tools</li>
-          <li>🎫 Handled client tickets and support</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Education -->
-    <section id="education" class="py-16 max-w-4xl mx-auto px-6">
-      <h2 class="text-3xl text-teal-300 font-semibold mb-4">🎓 Education</h2>
-      <ul class="text-gray-300 space-y-2">
-        <li><strong>B.Sc. CSIT</strong> – Swastik College (TU Affiliated) | 2073–2078</li>
-        <li><strong>+2 Science</strong> – Ambition Academy | 2071–2073</li>
-        <li><strong>SLC</strong> – Apex Life School | 2070</li>
+    <div>
+      <h3 class="text-xl font-bold mb-2">Intern – Datahub Pvt. Ltd</h3>
+      <p class="text-sm text-gray-400">📅 Nov 2021 – Feb 2022</p>
+      <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
+        <li>Provisioned virtual machines for various clients</li>
+        <li>Set up monitoring and alert systems</li>
+        <li>Assisted with client issue resolution and ticket handling</li>
       </ul>
-    </section>
+    </div>
+  </section>
 
-    <!-- Contact -->
-    <section id="contact" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300">
-      <h2 class="text-3xl text-teal-300 font-semibold mb-4">📬 Contact</h2>
-      <p>📧 Email: <a href="mailto:saugatneupane31@gmail.com" class="text-teal-400">saugatneupane31@gmail.com</a></p>
-      <p>📞 Phone: +977 9860905972</p>
-      <p>📍 Location: Kaushaltar, Bhaktapur</p>
-    </section>
+  <!-- Education -->
+  <section id="education" class="py-16 max-w-4xl mx-auto px-6 slide-up">
+    <h2 class="text-3xl text-teal-300 font-semibold mb-4">🎓 Education</h2>
+    <ul class="text-gray-300 space-y-2">
+      <li><strong>B.Sc. CSIT</strong> – Swastik College (Tribhuvan University) | 2073–2078</li>
+      <li><strong>+2 Science</strong> – Ambition Academy | 2071–2073</li>
+      <li><strong>SLC</strong> – Apex Life School | 2070</li>
+    </ul>
+  </section>
 
-  </main>
+  <!-- Contact -->
+  <section id="contact" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300 slide-up">
+    <h2 class="text-3xl text-teal-300 font-semibold mb-4">📬 Contact</h2>
+    <p>📧 Personal: <a href="mailto:saugatneupane31@gmail.com" class="text-teal-400">saugatneupane31@gmail.com</a></p>
+    <p>📧 Work: <a href="mailto:saugat.neupane@datahub.com.np" class="text-teal-400">saugat.neupane@datahub.com.np</a></p>
+    <p>📞 Phone: +977 9860905972</p>
+    <p>📍 Location: Kaushaltar, Bhaktapur, Nepal</p>
+  </section>
+</main>
 
-  <footer class="text-center py-6 text-gray-500 border-t border-gray-700 mt-10">
-    &copy; 2025 Saugat Neupane. All rights reserved.
-  </footer>
+<footer class="text-center py-6 text-gray-500 border-t border-gray-700 mt-10">
+  &copy; 2025 Saugat Neupane. All rights reserved.
+</footer>
+
 </body>
 </html>
