--- a/index.html
+++ b/index.html
@@ -39,99 +39,113 @@
 
 <main class="pt-36 fade-in">
 
-  <!-- Hero -->
-  <section class="text-center py-20 px-4">
-    <h2 class="text-4xl font-bold text-teal-400 mb-4 animate-bounce">🚀 DevOps & Linux Engineer</h2>
-    <p class="text-lg text-gray-300 max-w-2xl mx-auto slide-up">
-      Experienced in Linux systems, virtual platforms, cloud orchestration, monitoring, and automation — turning infrastructure into robust systems.
-    </p>
-  </section>
+<!-- Hero -->
+<section class="text-center py-20 px-4">
+  <h2 class="text-4xl font-bold text-teal-400 mb-4 animate-bounce">🚀 DevOps & Infrastructure Engineer</h2>
+  <p class="text-lg text-gray-300 max-w-2xl mx-auto slide-up">
+    Experienced in Linux, virtualization, cloud, monitoring & automation. I build reliable, scalable infrastructure and support mission-critical systems.
+  </p>
+</section>
 
-  <!-- About -->
-  <section id="about" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
-    <h2 class="text-3xl text-teal-300 font-semibold mb-4">🙋‍♂️ About Me</h2>
-    <p class="text-gray-300">
-      I'm an adaptable and quick-learning IT professional with 3+ years of experience, passionate about Linux, cloud virtualization, DevOps, and infrastructure design. I bring hands-on expertise with cloud platforms, bare-metal hypervisors, monitoring tools, and scripting.
-    </p>
-  </section>
+<!-- About -->
+<section id="about" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
+  <h2 class="text-3xl text-teal-300 font-semibold mb-4">🙋‍♂️ About Me</h2>
+  <p class="text-gray-300">
+    With over 3 years of hands-on experience, I am highly knowledgeable in Linux, virtualization, containers, networking, and storage systems. I excel in configuring, troubleshooting, and optimizing complex environments for peak performance and availability. My experience spans cloud platforms, web development, backup/monitoring tools, and a passion for continuous improvement.
+  </p>
+</section>
 
-  <!-- Skills -->
-  <section id="skills" class="py-16 max-w-5xl mx-auto px-6 fade-in">
-    <h2 class="text-3xl text-teal-300 font-semibold mb-6">🛠️ Technical Skills</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-gray-300">
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐧 Linux, 🪟 Windows OS</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📦 Docker, Podman (Containers)</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🖥️ VMware, KVM, XCP-NG, Verge.io</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">☁️ CloudStack, Jelastic, Azure</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">💾 TrueNAS, Open-E (Storage)</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛢️ MySQL, PostgreSQL, MSSQL</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📡 Zabbix, 🔧 Ninja RMM</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛡️ Arcserve UDP, Ahsay, Commvault</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐍 Python, 💻 Bash Scripting</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🌐 HTML, CSS</div>
-      <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🤝 Communication, 🧠 Teamwork</div>
-    </div>
-  </section>
+<!-- Skills -->
+<section id="skills" class="py-16 max-w-5xl mx-auto px-6 fade-in">
+  <h2 class="text-3xl text-teal-300 font-semibold mb-6">🛠️ Technical Skills</h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-gray-300">
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐧 Linux, Windows</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📦 Docker, Podman</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">☁️ CloudStack, Azure, Jelastic</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🖥️ VMware, XCP-NG, KVM, VERGE.IO, XenCenter</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">💾 TrueNAS, Open-E</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛢️ MySQL, PostgreSQL, MSSQL</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛡️ Arcserve UDP, Ahsay, Commvault</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📡 Zabbix, 🔧 Ninja RMM</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📊 Metabase, 📈 Kibana</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛠️ Jira (Ticketing)</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐍 Python, 💻 Bash</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🌐 HTML, CSS</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🤝 Teamwork, Communication</div>
+  </div>
+</section>
 
-  <!-- Training -->
-  <section id="training" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
-    <h2 class="text-3xl text-teal-300 font-semibold mb-4">📚 Training & Certifications</h2>
-    <p class="text-gray-300">
-      ✅ <strong>CCNA</strong> – 3-month Cisco networking course: OSI model, routing/switching, practical design & hardware implementation.
-    </p>
-  </section>
+<!-- Training -->
+<section id="training" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
+  <h2 class="text-3xl text-teal-300 font-semibold mb-4">📚 Training & Certifications</h2>
+  <p class="text-gray-300">
+    ✅ <strong>CCNA</strong> – Completed 3-month training on OSI model, routing/switching, Cisco configurations, network design & device setup. Practical labs using Cisco routers & switches.
+  </p>
+</section>
 
-  <!-- Experience -->
-  <section id="experience" class="py-16 max-w-4xl mx-auto px-6 fade-in">
-    <h2 class="text-3xl text-teal-300 font-semibold mb-6">💼 Work Experience</h2>
+<!-- Experience -->
+<section id="experience" class="py-16 max-w-4xl mx-auto px-6 fade-in">
+  <h2 class="text-3xl text-teal-300 font-semibold mb-6">💼 Work Experience</h2>
 
-    <div class="mb-8">
-      <h3 class="text-xl font-bold mb-2">Senior Assistant (IT) – Datahub Pvt. Ltd</h3>
-      <p class="text-sm text-gray-400">📅 Nov 2021 – Present</p>
-      <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
-        <li>Provisioned and deployed bare-metal hypervisors (VMware, XCP-NG, Verge.io)</li>
-        <li>Installed & configured storage solutions: TrueNAS, Open-E</li>
-        <li>Configured Docker & Podman containers for Dev & Prod workloads</li>
-        <li>Designed Zabbix monitoring for servers, containers, and services</li>
-        <li>Performed User Acceptance Testing (UAT) on internal platforms</li>
-        <li>Created automation scripts using Python & Bash</li>
-        <li>Configured & managed backups using Arcserve, Ahsay, and Commvault</li>
-        <li>Provided Linux & Windows support, resolved technical support tickets</li>
-        <li>Assisted cloud migration, VM provisioning, and client infrastructure setup</li>
-      </ul>
-    </div>
-
-    <div>
-      <h3 class="text-xl font-bold mb-2">Intern – Datahub Pvt. Ltd</h3>
-      <p class="text-sm text-gray-400">📅 Nov 2021 – Feb 2022</p>
-      <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
-        <li>Provisioned virtual machines for various clients</li>
-        <li>Set up monitoring and alert systems</li>
-        <li>Assisted with client issue resolution and ticket handling</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- Education -->
-  <section id="education" class="py-16 max-w-4xl mx-auto px-6 slide-up">
-    <h2 class="text-3xl text-teal-300 font-semibold mb-4">🎓 Education</h2>
-    <ul class="text-gray-300 space-y-2">
-      <li><strong>B.Sc. CSIT</strong> – Swastik College (Tribhuvan University) | 2073–2078</li>
-      <li><strong>+2 Science</strong> – Ambition Academy | 2071–2073</li>
-      <li><strong>SLC</strong> – Apex Life School | 2070</li>
+  <div class="mb-8">
+    <h3 class="text-xl font-bold mb-2">Application Reliability Engineer – Nepal Mobility Solutions Pvt. Ltd.</h3>
+    <p class="text-sm text-gray-400">📅 March 2025 – Present</p>
+    <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
+      <li>Application support and troubleshooting via internal portal</li>
+      <li>Used Jira for ticketing and customer issue tracking</li>
+      <li>Analyzed metrics via Metabase and Kibana for system reliability</li>
+      <li>Performed root cause analysis and improved fault resilience</li>
+      <li>Worked heavily on Linux systems to optimize performance</li>
     </ul>
-  </section>
+  </div>
 
-  <!-- Contact -->
-  <section id="contact" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300 slide-up">
-    <h2 class="text-3xl text-teal-300 font-semibold mb-4">📬 Contact</h2>
-    <p>📧 Personal: <a href="mailto:saugatneupane31@gmail.com" class="text-teal-400">saugatneupane31@gmail.com</a></p>
-    <p>📧 Work: <a href="mailto:saugat.neupane@datahub.com.np" class="text-teal-400">saugat.neupane@datahub.com.np</a></p>
-    <p>📞 Phone: +977 9860905972</p>
-    <p>📍 Location: Kaushaltar, Bhaktapur, Nepal</p>
-  </section>
+  <div class="mb-8">
+    <h3 class="text-xl font-bold mb-2">Senior Assistant (IT) – Datahub Pvt. Ltd.</h3>
+    <p class="text-sm text-gray-400">📅 Nov 2021 – March 2025</p>
+    <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
+      <li>Deployed hypervisors: VMware, XCP-NG, Verge.io, Xenserver</li>
+      <li>Installed storage software: TrueNAS, OpenE</li>
+      <li>Migrated websites/webapps to cloud platforms</li>
+      <li>Wrote automation scripts for tasks like package installations</li>
+      <li>Configured monitoring for physical servers, VMs, containers</li>
+      <li>Conducted UAT testing for internal tools</li>
+      <li>Provided OS support, setup backup servers, monitored infra</li>
+    </ul>
+  </div>
+
+  <div>
+    <h3 class="text-xl font-bold mb-2">Intern – Datahub Pvt. Ltd.</h3>
+    <p class="text-sm text-gray-400">📅 Nov 2021 – Feb 2022</p>
+    <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
+      <li>Provisioned and delivered VMs to clients</li>
+      <li>Installed monitoring tools on VM systems</li>
+      <li>Resolved technical issues and managed tickets</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Education -->
+<section id="education" class="py-16 max-w-4xl mx-auto px-6 slide-up">
+  <h2 class="text-3xl text-teal-300 font-semibold mb-4">🎓 Education</h2>
+  <ul class="text-gray-300 space-y-2">
+    <li><strong>B.Sc. CSIT</strong> – Swastik College (TU Affiliated) | 2073–2078</li>
+    <li><strong>+2 Science</strong> – Ambition Academy | 2071–2073</li>
+    <li><strong>SLC</strong> – Apex Life School | 2070</li>
+  </ul>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300 slide-up">
+  <h2 class="text-3xl text-teal-300 font-semibold mb-4">📬 Contact</h2>
+  <p>📧 Personal: <a href="mailto:saugatneupane31@gmail.com" class="text-teal-400">saugatneupane31@gmail.com</a></p>
+  <p>📧 Work: <a href="mailto:saugat.neupane@jumjum.com" class="text-teal-400">saugat.neupane@jumjum.com</a></p>
+  <p>📞 Phone: +977 9860905972</p>
+  <p>📍 Location: Kaushaltar, Bhaktapur</p>
+</section>
+
 </main>
 
+<!-- Footer -->
 <footer class="text-center py-6 text-gray-500 border-t border-gray-700 mt-10">
   &copy; 2025 Saugat Neupane. All rights reserved.
 </footer>
