--- a/index.html
+++ b/index.html
@@ -5,31 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Saugat Neupane | Portfolio</title>
   <link href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     html { scroll-behavior: smooth; }
-    .fade-in { animation: fadeIn 1.2s ease-in-out both; }
-    .slide-up { animation: slideUp 1.2s ease-in-out both; }
-    .pulse-hover:hover { transform: scale(1.03); transition: transform 0.3s ease-in-out; }
-    @keyframes fadeIn {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    @keyframes slideUp {
-      0% { opacity: 0; transform: translateY(30px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
+    .pulse-hover:hover { transform: scale(1.05); transition: transform 0.3s ease-in-out; }
+    .glow:hover { text-shadow: 0 0 8px #00f7ff; transition: all 0.4s ease; }
   </style>
 </head>
 <body class="bg-gray-900 text-white font-sans">
 
 <!-- Navbar -->
-<nav class="bg-gray-800 fixed w-full top-0 z-50 shadow-md">
+<nav class="bg-gray-800 bg-opacity-80 backdrop-blur fixed w-full top-0 z-50 shadow-md" data-aos="fade-down">
   <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-    <h1 class="text-teal-400 text-xl font-bold">Saugat Neupane</h1>
+    <h1 class="text-teal-400 text-xl font-bold glow">Saugat Neupane</h1>
     <ul class="flex space-x-6 text-sm font-medium">
       <li><a href="#about" class="hover:text-teal-300">About</a></li>
       <li><a href="#skills" class="hover:text-teal-300">Skills</a></li>
-      <li><a href="#training" class="hover:text-teal-300">Training</a></li>
+      <li><a href="#projects" class="hover:text-teal-300">Projects</a></li>
       <li><a href="#experience" class="hover:text-teal-300">Experience</a></li>
       <li><a href="#education" class="hover:text-teal-300">Education</a></li>
       <li><a href="#contact" class="hover:text-teal-300">Contact</a></li>
@@ -37,95 +29,87 @@
   </div>
 </nav>
 
-<main class="pt-36 fade-in">
+<main class="pt-36">
 
-<!-- Hero -->
-<section class="text-center py-20 px-4">
-  <h2 class="text-4xl font-bold text-teal-400 mb-4 animate-bounce">🚀 DevOps & Infrastructure Engineer</h2>
-  <p class="text-lg text-gray-300 max-w-2xl mx-auto slide-up">
+<!-- Hero with Typewriter -->
+<section class="text-center py-20 px-4" data-aos="zoom-in">
+  <h2 class="text-4xl font-bold text-teal-400 mb-4 glow">
+    <span id="typewriter-text"></span>
+  </h2>
+  <p class="text-lg text-gray-300 max-w-2xl mx-auto">
     Experienced in Linux, virtualization, cloud, monitoring & automation. I build reliable, scalable infrastructure and support mission-critical systems.
   </p>
 </section>
 
 <!-- About -->
-<section id="about" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
+<section id="about" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg" data-aos="fade-up">
   <h2 class="text-3xl text-teal-300 font-semibold mb-4">🙋‍♂️ About Me</h2>
   <p class="text-gray-300">
-    With over 3 years of hands-on experience, I am highly knowledgeable in Linux, virtualization, containers, networking, and storage systems. I excel in configuring, troubleshooting, and optimizing complex environments for peak performance and availability. My experience spans cloud platforms, web development, backup/monitoring tools, and a passion for continuous improvement.
+    I'm an engineer with 3+ years of experience in systems and infrastructure. I'm passionate about automating deployments, scaling applications, and ensuring reliability across environments.
   </p>
 </section>
 
 <!-- Skills -->
-<section id="skills" class="py-16 max-w-5xl mx-auto px-6 fade-in">
+<section id="skills" class="py-16 max-w-5xl mx-auto px-6" data-aos="fade-up">
   <h2 class="text-3xl text-teal-300 font-semibold mb-6">🛠️ Technical Skills</h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-gray-300">
     <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐧 Linux, Windows</div>
     <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📦 Docker, Podman</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">☁️ CloudStack, Azure, Jelastic</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🖥️ VMware, XCP-NG, KVM, VERGE.IO, XenCenter</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">☁️ CloudStack, Azure</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🖥️ VMware, KVM, XCP-NG</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📊 Kibana, Metabase</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📡 Zabbix, NinjaRMM</div>
+    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🧠 Jira, Monitoring</div>
     <div class="bg-gray-800 p-4 rounded shadow pulse-hover">💾 TrueNAS, Open-E</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛢️ MySQL, PostgreSQL, MSSQL</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛡️ Arcserve UDP, Ahsay, Commvault</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📡 Zabbix, 🔧 Ninja RMM</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">📊 Metabase, 📈 Kibana</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🛠️ Jira (Ticketing)</div>
     <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🐍 Python, 💻 Bash</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🌐 HTML, CSS</div>
-    <div class="bg-gray-800 p-4 rounded shadow pulse-hover">🤝 Teamwork, Communication</div>
   </div>
 </section>
 
-<!-- Training -->
-<section id="training" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg slide-up">
-  <h2 class="text-3xl text-teal-300 font-semibold mb-4">📚 Training & Certifications</h2>
-  <p class="text-gray-300">
-    ✅ <strong>CCNA</strong> – Completed 3-month training on OSI model, routing/switching, Cisco configurations, network design & device setup. Practical labs using Cisco routers & switches.
-  </p>
+<!-- Projects -->
+<section id="projects" class="py-16 max-w-5xl mx-auto px-6" data-aos="fade-up">
+  <h2 class="text-3xl text-teal-300 font-semibold mb-6">💻 Featured Projects</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 text-gray-300">
+    <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition-all" data-aos="zoom-in">
+      <div class="text-3xl mb-2">🔧</div>
+      <h3 class="text-xl font-bold mb-1">Infrastructure Monitoring</h3>
+      <p>Built an automated monitoring setup using Zabbix and custom scripts to monitor 100+ VMs and services in real-time.</p>
+    </div>
+    <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition-all" data-aos="zoom-in" data-aos-delay="100">
+      <div class="text-3xl mb-2">📡</div>
+      <h3 class="text-xl font-bold mb-1">VM Deployment Automation</h3>
+      <p>Scripted VM provisioning and backups using Python and Bash across hybrid cloud environments with VMware & XCP-NG.</p>
+    </div>
+  </div>
 </section>
 
 <!-- Experience -->
-<section id="experience" class="py-16 max-w-4xl mx-auto px-6 fade-in">
+<section id="experience" class="py-16 max-w-4xl mx-auto px-6" data-aos="fade-right">
   <h2 class="text-3xl text-teal-300 font-semibold mb-6">💼 Work Experience</h2>
 
   <div class="mb-8">
-    <h3 class="text-xl font-bold mb-2">Application Reliability Engineer – Nepal Mobility Solutions Pvt. Ltd.</h3>
-    <p class="text-sm text-gray-400">📅 March 2025 – Present</p>
+    <h3 class="text-xl font-bold mb-2">Application Reliability Engineer – Nepal Mobility Solutions</h3>
+    <p class="text-sm text-gray-400">📅 Mar 2025 – Present</p>
     <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
       <li>Application support and troubleshooting via internal portal</li>
       <li>Used Jira for ticketing and customer issue tracking</li>
       <li>Analyzed metrics via Metabase and Kibana for system reliability</li>
       <li>Performed root cause analysis and improved fault resilience</li>
-      <li>Worked heavily on Linux systems to optimize performance</li>
     </ul>
   </div>
 
   <div class="mb-8">
-    <h3 class="text-xl font-bold mb-2">Senior Assistant (IT) – Datahub Pvt. Ltd.</h3>
-    <p class="text-sm text-gray-400">📅 Nov 2021 – March 2025</p>
+    <h3 class="text-xl font-bold mb-2">Senior Assistant – Datahub Pvt. Ltd.</h3>
+    <p class="text-sm text-gray-400">📅 Nov 2021 – Mar 2025</p>
     <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
-      <li>Deployed hypervisors: VMware, XCP-NG, Verge.io, Xenserver</li>
-      <li>Installed storage software: TrueNAS, OpenE</li>
-      <li>Migrated websites/webapps to cloud platforms</li>
-      <li>Wrote automation scripts for tasks like package installations</li>
-      <li>Configured monitoring for physical servers, VMs, containers</li>
-      <li>Conducted UAT testing for internal tools</li>
-      <li>Provided OS support, setup backup servers, monitored infra</li>
-    </ul>
-  </div>
-
-  <div>
-    <h3 class="text-xl font-bold mb-2">Intern – Datahub Pvt. Ltd.</h3>
-    <p class="text-sm text-gray-400">📅 Nov 2021 – Feb 2022</p>
-    <ul class="list-disc list-inside text-gray-300 space-y-2 mt-2">
-      <li>Provisioned and delivered VMs to clients</li>
-      <li>Installed monitoring tools on VM systems</li>
-      <li>Resolved technical issues and managed tickets</li>
+      <li>Deployed hypervisors: VMware, XCP-NG, Verge.io</li>
+      <li>Configured TrueNAS, Open-E for storage</li>
+      <li>Created automation scripts using Python & Bash</li>
     </ul>
   </div>
 </section>
 
 <!-- Education -->
-<section id="education" class="py-16 max-w-4xl mx-auto px-6 slide-up">
+<section id="education" class="py-16 max-w-4xl mx-auto px-6" data-aos="fade-up">
   <h2 class="text-3xl text-teal-300 font-semibold mb-4">🎓 Education</h2>
   <ul class="text-gray-300 space-y-2">
     <li><strong>B.Sc. CSIT</strong> – Swastik College (TU Affiliated) | 2073–2078</li>
@@ -135,7 +119,7 @@
 </section>
 
 <!-- Contact -->
-<section id="contact" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300 slide-up">
+<section id="contact" class="py-16 bg-gray-800 rounded-lg max-w-4xl mx-auto px-6 my-10 shadow-lg text-gray-300" data-aos="zoom-in">
   <h2 class="text-3xl text-teal-300 font-semibold mb-4">📬 Contact</h2>
   <p>📧 Personal: <a href="mailto:saugatneupane31@gmail.com" class="text-teal-400">saugatneupane31@gmail.com</a></p>
   <p>📧 Work: <a href="mailto:saugat.neupane@jumjum.com" class="text-teal-400">saugat.neupane@jumjum.com</a></p>
@@ -150,5 +134,18 @@
   &copy; 2025 Saugat Neupane. All rights reserved.
 </footer>
 
+<!-- Scripts -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script>
+  AOS.init({ duration: 1000, once: true });
+  new Typed("#typewriter-text", {
+    strings: ["🚀 DevOps &amp; 🛠️ Infrastructure Engineer"],
+    typeSpeed: 50,
+    backSpeed: 20,
+    loop: false,
+    showCursor: false
+  });
+</script>
 </body>
 </html>
