--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <script>
   AOS.init({ duration: 1000, once: true });
   new Typed("#typewriter-text", {
-    strings: ["🚀 DevOps &amp; 🛠️ Infrastructure Engineer"],
+    strings: ["🚀 DevOps &amp; 🔧 Infrastructure Engineer"],
     typeSpeed: 50,
     backSpeed: 20,
     loop: false,
